--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "private": true,
     "scripts": {
         "build": "npm install --prefix client && npm run build --prefix client && npm install --prefix server && npm run build --prefix server",
-        "start": "node server/dist/scripts/initDb.js && node server/dist/index.js"
+        "start": "node server/dist/scripts/initDb.js && node server/dist/index.js",
+        "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\""
     },
     "engines": {
         "node": "18.x"
+    },
+    "devDependencies": {
+        "concurrently": "^9.2.1"
     }
 }
